--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="js/jquery-3.2.1.min.js" type="text/javascript"></script>
-    <script src="js/jquery.class.js" type="text/javascript"></script>
-    <script src="js/flatfish.js" type="text/javascript"></script>
+    <script src="src/jquery-3.2.1.min.js" type="text/javascript"></script>
+    <script src="src/jquery.class.js" type="text/javascript"></script>
 </head>
 <body>
 
