--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="src/jquery-3.2.1.min.js" type="text/javascript"></script>
-    <script src="src/jquery.class.js" type="text/javascript"></script>
+    <!--<script src="src/lib/jquery-3.2.1.min.js" type="text/javascript"></script>-->
+    <!--<script src="src/lib/jquery.class.js" type="text/javascript"></script>-->
 </head>
 <body>
-
+<canvas id="flatfish"></canvas>
 </body>
+<script src="dist/flatfish.js"></script>
 </html>
