--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <!--<script src="src/lib/jquery-3.2.1.min.js" type="text/javascript"></script>-->
+    <title>比目鱼</title>
+    <link rel="stylesheet" href="css/default.css"/>
     <!--<script src="src/lib/jquery.class.js" type="text/javascript"></script>-->
 </head>
 <body>
-<canvas id="flatfish"></canvas>
+<canvas id="flatfish" width="100%" height="100%"></canvas>
 </body>
+<script src="src/lib/jquery-3.2.1.min.js" type="text/javascript"></script>
 <script src="dist/flatfish.js"></script>
 </html>
